Add tree-sitter test
Be resilient to missing nvim-treesitter

Add basic test for ts

Fix test

Install treesitter parser for test

Install python parser differently

Fix nvim call

Fix vader path

Try TSInstallSync

Use nvim headless

Quit after

Fix test

Try to fix ruby test

Add logging to rb test

--- a/.github/workflows/neovim.yml
+++ b/.github/workflows/neovim.yml
@@ -28,6 +28,12 @@ jobs:
           vim_version: '${{ matrix.neovim_version }}'
           vim_type: 'Neovim'
 
+      - name: Install nvim-treesitter
+        run: git clone --depth=1 https://github.com/nvim-treesitter/nvim-treesitter.git test/vader/plugged/nvim-treesitter
+
+      - name: Install python treesitter module
+        run: nvim --headless -Nu test/vader/minvimrc -c 'TSInstallSync python' -c 'q'
+
       - name: 'Show version'
         run: nvim --version
 
